Se corrigen los errores de sonarlint